gcc/testsuite/g++.dg/cilk-plus/array_notation_tests/errors/invalid_types.cc
/* { dg-do compile } */
/* { dg-options "-fcilkplus" } */

#include <complex>

std::complex<double> A[16], a;

void
check ()
{
    a = __sec_reduce_add (A[:]); /* { dg-error "array notations in builtin functions must" } */ 
}

